# KnishIO-Client-C

./: .clang-tidy  .gitignore  CMakeLists.txt  KnishIOClientConfig.cmake  KnishIOClientConfigVersion.cmake  README.md  build-integration-tests.sh  cmake_install.cmake  config.h  integration_test.c  knishio-client.pc.in  run-selftest.sh  self-test.c
.github/workflows/: ci.yml
cmake/: KnishIOClientConfig.cmake.in
examples/: auth_demo.c  graphql_operations_example.c  http_graphql_example.c  websocket_subscriptions_example.c
include/knishio/: atom.h  auth_token.h  client.h  client_auth.h  client_ops.h  error.h  exceptions.h  fingerprint.h  graphql.h  http.h  js_equivalent_constructors.h  json.h  knishio.h  meta.h  molecule.h  token_unit.h  wallet.h
include/knishio/crypto/: aes_gcm.h  bigint.h  mlkem768.h  shake256.h
include/knishio/error/: context.h
include/knishio/http/: client.h
include/knishio/json/: builder.h  parser.h  serializers.h
include/knishio/mutation/: mutations.h
include/knishio/operations/: auth.h  graphql_operations.h  identity.h  policy.h  query.h  token.h  transfer.h  wallet.h
include/knishio/policy/: engine.h  rule.h
include/knishio/query/: queries.h
include/knishio/response/: response.h  response_active_session.h  response_atom.h  response_authorization_guest.h  response_balance.h  response_claim_shadow_wallet.h  response_continu_id.h  response_create_identifier.h  response_create_meta.h  response_create_rule.h  response_create_token.h  response_create_wallet.h  response_link_identifier.h  response_meta_batch.h  response_meta_type.h  response_policy.h  response_propose_molecule.h  response_query_active_session.h  response_query_user_activity.h  response_request_authorization.h  response_request_authorization_guest.h  response_request_tokens.h  response_transfer_tokens.h  response_types.h  response_wallet_bundle.h  response_wallet_list.h  responses.h
include/knishio/subscribe/: subscriptions.h
include/knishio/utils/: array.h  encoding.h  logging.h  map.h  memory.h  security.h  string.h
src/: atom.c  auth_token.c  client.c  client_auth.c  client_internal.h  client_ops.c  config.h.in  exceptions.c  fingerprint.c  graphql.c  http.c  js_equivalent_constructors.c  knishio.c  meta.c  molecule.c  policy_meta.c  token_unit.c  wallet.c
src/crypto/: aes_gcm.c  bigint.c  mlkem768.c  shake256.c
src/error/: context.c
src/graphql/: websocket_protocol.c
src/http/: client.c  websocket.c  websocket_libws.c
src/json/: builder.c  parser.c  serializers.c
src/libraries/: base64.c  check_molecule.c
src/mutation/: mutations.c
src/operations/: auth.c  graphql_operations.c  identity.c  policy.c  query.c  token.c  transfer.c  wallet.c
src/policy/: rule.c
src/query/: queries.c
src/response/: response.c  response_balance.c  response_continu_id.c  response_types.c  response_wallet_list.c  responses.c
src/subscribe/: subscriptions.c
src/utils/: logging.c  memory.c  security.c  string.c
tests/: CMakeLists.txt  benchmark_init.c  test_auth_system.c  test_bigint.c  test_error.c  test_graphql_operations.c  test_json.c  test_main.c  test_memory.c  test_memory_leaks.c  test_molecule.c  test_policy_engine.c  test_shake256.c  test_signatures.c  test_string.c  test_wallet.c
